--- a/VSUQSM/src/app/features/admin-layout/a-contentmgmt/content-mod/content-mod.component.html
+++ b/VSUQSM/src/app/features/admin-layout/a-contentmgmt/content-mod/content-mod.component.html
@@ -4,7 +4,7 @@
       class="relative flex flex-col w-full min-h-[500px] bg-cover rounded-lg shadow-lg"
       [ngStyle]="{
         'background-color':
-          backgroundType === 'color' ? backgroundColor : 'transparent',
+          backgroundType === 'color' ? backgroundColor : '#283c1c',
         'background-image':
           backgroundType === 'photo' && backgroundPhotoUrl
             ? 'url(' + backgroundPhotoUrl + ')'
